--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,12 @@
 [build]
   command = "npm run build"
   publish = "backend/dist"
+
+  [build]
+  # Frontend build settings
+  command = "npm run build"  # Adjust the build command as per your frontend setup
+  publish = "clientfrontend/build"  # Adjust the publish directory as per your frontend setup
+
+[build.environment]
+  # Backend build settings
+  FUNCTIONS_DIR = "backeneddata"  # Specify the directory containing backend functions
