toml file changesss

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@
 
   dir = "backeneddata"     
   command = "npm start"  
-  publish = "dist"  
+  publish = "backeneddata/dist"  
   functions = "functions"  
   deploy = { command = "netlify deploy --prod" }
 
