updte file render pack

--- a/backeneddata/package.json
+++ b/backeneddata/package.json
@@ -18,6 +18,8 @@
     "express": "^4.19.1",
     "mongoose": "^8.2.2",
     "netlify-cli": "^17.21.1",
+    "serverless-http": "^3.2.0",
+    "netlify-lambda": "^2.0.16",
     "nodemon": "^3.1.0"
   }
 }
