updte file render pack mongo issue

--- a/backeneddata/config/config.env
+++ b/backeneddata/config/config.env
@@ -1,5 +1,6 @@
  
     MONGODB_LOCAL_URL = mongodb://127.0.0.1:27017/
 
-    MONGODB_PROD_URL = mongodb+srv://rosemarykatikala7:MongoAtlasBigBasket@cluster0.ldydleu.mongodb.net/
+    MONGODB_PROD_URL = mongodb+srv://rosemarykatikala7:rosemary@cluster0.lpmffov.mongodb.net/
+
 
