--- a/clientfrontend/package.json
+++ b/clientfrontend/package.json
@@ -2,6 +2,8 @@
   "name": "clientsidereactapp",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://reactbigbasketapp.onrender.com",
+
   "dependencies": {
     "@fvilers/disable-react-devtools": "^1.3.0",
     "@testing-library/jest-dom": "^5.17.0",
